Implement in-memory and Azure Tables data access classes. Create basic REST endpoints for POSTing and GETing flyers
